<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasks_screen">

    <fragment
        android:id="@+id/tasks_screen"
        android:name="com.example.sltodolist.presentation.list.ListFragment"
        android:label="@string/label_task_list"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_tasksScreen_to_addEditTaskScreen"
            app:destination="@id/add_task_screen" />

        <action
            android:id="@+id/action_tasksScreen_to_taskDetailScreen"
            app:destination="@id/task_detail_screen" />

    </fragment>

    <fragment
        android:id="@+id/add_task_screen"
        android:name="com.example.sltodolist.presentation.add_task.AddTaskFragment"
        android:label="@string/label_add_task"
        tools:layout="@layout/fragment_add_task">

        <argument
            android:name="taskId"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="description"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="priority"
            app:argType="integer" />

        <argument
            android:name="deadline"
            app:argType="long" />

    </fragment>

    <fragment
        android:id="@+id/task_detail_screen"
        android:name="com.example.sltodolist.presentation.task_detail.TaskDetailFragment"
        android:label="@string/label_task_detail"
        tools:layout="@layout/fragment_task_detail">

        <argument
            android:name="taskId"
            app:argType="string" />

        <action
            android:id="@+id/action_taskDetailScreen_to_addEditTaskScreen"
            app:destination="@id/add_task_screen" />

    </fragment>

</navigation>